--- a/index.html
+++ b/index.html
@@ -3,20 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <title>Quả Cầu Tuyết Christmas 2025</title>
+  <title>Quả Cầu Tuyết Giáng Sinh 2025</title>
   <style>
     body { margin:0; overflow:hidden; background:#0a1a3a; touch-action:none; }
     #info {
       position:absolute; top:20px; left:50%; transform:translateX(-50%);
-      color:#fff; background:rgba(0,0,0,0.5); padding:10px 25px; border-radius:30px;
-      font-family:Arial, sans-serif; font-size:16px; pointer-events:none; z-index:10;
+      color:#fff; background:rgba(0,0,0,0.6); padding:12px 30px; border-radius:30px;
+      font-family:'Segoe UI',Arial,sans-serif; font-size:17px; pointer-events:none; z-index:10;
     }
   </style>
 </head>
 <body>
-  <div id="info">Chạm hoặc lắc quả cầu tuyết nhé!</div>
+  <div id="info">Chạm vào quả cầu tuyết để lắc nào!</div>
 
-  <!-- DÙNG IMPORT MAP ĐỂ FIX LỖI "Failed to resolve module specifier" -->
   <script type="importmap">
   {
     "imports": {
@@ -30,14 +29,13 @@
     import * as THREE from 'three';
     import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
 
-    // ==================== CƠ BẢN ====================
     const scene = new THREE.Scene();
     scene.background = new THREE.Color(0x0a1a3a);
 
-    const camera = new THREE.PerspectiveCamera(50, innerWidth / innerHeight, 0.1, 1000);
+    const camera = new THREE.PerspectiveCamera(50, innerWidth/innerHeight, 0.1, 1000);
     camera.position.z = 350;
 
-    const renderer = new THREE.WebGLRenderer({ antialias: true });
+    const renderer = new THREE.WebGLRenderer({ antialias:true });
     renderer.setSize(innerWidth, innerHeight);
     renderer.setPixelRatio(devicePixelRatio);
     document.body.appendChild(renderer.domElement);
@@ -46,14 +44,14 @@
     controls.enableDamping = true;
     controls.dampingFactor = 0.08;
     controls.enablePan = false;
-    controls.minDistance = 200;
-    controls.maxDistance = 500;
+    controls.minDistance = 180;
+    controls.maxDistance = 550;
 
     // ==================== QUẢ CẦU TUYẾT ====================
     const globe = new THREE.Group();
     scene.add(globe);
 
-    // Kính ngoài (hiệu ứng trong suốt)
+    // Kính ngoài (để raycast bắt click chính xác)
     const glass = new THREE.Mesh(
       new THREE.SphereGeometry(120, 64, 64),
       new THREE.MeshStandardMaterial({
@@ -67,19 +65,20 @@
     );
     globe.add(glass);
 
-    // Đế gỗ + dải đỏ
+    // Đế gỗ
     const base = new THREE.Mesh(
-      new THREE.CylinderGeometry(80, 90, 60, 64),
+      new THREE.CylinderGeometry(82, 92, 62, 64),
       new THREE.MeshStandardMaterial({ color: 0x8b4513 })
     );
     base.position.y = -150;
     globe.add(base);
 
+    // Dải đỏ quanh đế
     const ribbon = new THREE.Mesh(
-      new THREE.RingGeometry(80, 90, 64),
+      new THREE.RingGeometry(80, 92, 64),
       new THREE.MeshStandardMaterial({ color: 0xc41e3a, side: THREE.DoubleSide })
     );
-    ribbon.rotation.x = -Math.PI / 2;
+    ribbon.rotation.x = -Math.PI/2;
     ribbon.position.y = -125;
     globe.add(ribbon);
 
@@ -88,18 +87,18 @@
     canvas.width = 512; canvas.height = 128;
     const ctx = canvas.getContext('2d');
     const grad = ctx.createLinearGradient(0,0,512,128);
-    grad.addColorStop(0,'#ffdd00'); grad.addColorStop(1,'#b8860b');
+    grad.addColorStop(0,'#ffd700'); grad.addColorStop(1,'#b8860b');
     ctx.fillStyle = grad; ctx.fillRect(0,0,512,128);
-    ctx.strokeStyle = '#333'; ctx.lineWidth = 8; ctx.strokeRect(4,4,504,120);
-    ctx.fillStyle = '#8b0000'; ctx.font = 'bold 72px Arial';
+    ctx.strokeStyle = '#333'; ctx.lineWidth = 10; ctx.strokeRect(6,6,500,116);
+    ctx.fillStyle = '#8b0000'; ctx.font = 'bold 78px Arial';
     ctx.textAlign = 'center'; ctx.textBaseline = 'middle';
     ctx.fillText('Christmas', 256, 64);
 
     const label = new THREE.Mesh(
-      new THREE.PlaneGeometry(90, 28),
+      new THREE.PlaneGeometry(94, 30),
       new THREE.MeshBasicMaterial({ map: new THREE.CanvasTexture(canvas), transparent: true })
     );
-    label.position.set(0, -125, 81);
+    label.position.set(0, -125, 82);
     globe.add(label);
 
     // ==================== CẢNH BÊN TRONG ====================
@@ -107,89 +106,132 @@
     globe.add(inside);
 
     // Đất tuyết
-    inside.add(new THREE.Mesh(
-      new THREE.CircleGeometry(110, 64),
-      new THREE.MeshStandardMaterial({ color: 0xf8f9fa })
-    ).rotateX(-Math.PI/2).position.set(0,-80,0));
+    const ground = new THREE.Mesh(
+      new THREE.CircleGeometry(112, 64),
+      new THREE.MeshStandardMaterial({ color: 0xf5faff, roughness: 0.9 })
+    );
+    ground.rotation.x = -Math.PI/2;
+    ground.position.y = -80;
+    inside.add(ground);
 
     // Nhà gỗ
     const house = new THREE.Group();
-    house.add(new THREE.Mesh(new THREE.BoxGeometry(50,45,50), new THREE.MeshStandardMaterial({color:0x8b4513})));
-    const roof = new THREE.Mesh(new THREE.ConeGeometry(60,40,4), new THREE.MeshStandardMaterial({color:0xb22222}));
-    roof.position.y = 42; roof.rotation.y = Math.PI/4;
-    house.add(roof);
-    house.position.set(-15,-58,-20);
+    const walls = new THREE.Mesh(new THREE.BoxGeometry(52, 48, 52), new THREE.MeshStandardMaterial({color:0x8b4513}));
+    const roof = new THREE.Mesh(new THREE.ConeGeometry(64, 42, 4), new THREE.MeshStandardMaterial({color:0xb22222}));
+    roof.position.y = 45; roof.rotation.y = Math.PI/4;
+    const door = new THREE.Mesh(new THREE.BoxGeometry(12, 24, 2), new THREE.MeshStandardMaterial({color:0x654321}));
+    door.position.set(0, -12, 26.1);
+    house.add(walls, roof, door);
+    house.position.set(-18, -56, -18);
     inside.add(house);
 
-    // Người tuyết
+    // Người tuyết dễ thương
     const snowman = new THREE.Group();
-    snowman.add(new THREE.Mesh(new THREE.SphereGeometry(16), new THREE.MeshStandardMaterial({color:0xffffff})));
-    const mid = new THREE.Mesh(new THREE.SphereGeometry(12), new THREE.MeshStandardMaterial({color:0xffffff}));
-    mid.position.y = 22; snowman.add(mid);
-    const head = new THREE.Mesh(new THREE.SphereGeometry(9), new THREE.MeshStandardMaterial({color:0xffffff}));
-    head.position.y = 38; snowman.add(head);
-    const hat = new THREE.Mesh(new THREE.CylinderGeometry(7,9,18), new THREE.MeshStandardMaterial({color:0x000}));
-    hat.position.y = 46; snowman.add(hat);
-    const scarf = new THREE.Mesh(new THREE.BoxGeometry(20,4,10), new THREE.MeshStandardMaterial({color:0xff0000}));
-    scarf.position.set(0,30,9); snowman.add(scarf);
-    snowman.position.set(35,-64,5);
+    const body1 = new THREE.Mesh(new THREE.SphereGeometry(17), new THREE.MeshStandardMaterial({color:0xffffff}));
+    const body2 = new THREE.Mesh(new THREE.SphereGeometry(13), new THREE.MeshStandardMaterial({color:0xffffff}));
+    body2.position.y = 23;
+    const head = new THREE.Mesh(new THREE.SphereGeometry(10), new THREE.MeshStandardMaterial({color:0xffffff}));
+    head.position.y = 40;
+
+    // Mắt mũ cao bồi
+    const hat = new THREE.Mesh(new THREE.CylinderGeometry(8, 10, 20), new THREE.MeshStandardMaterial({color:0x000000}));
+    hat.position.y = 48;
+    const hatTop = new THREE.Mesh(new THREE.CylinderGeometry(12, 12, 4), new THREE.MeshStandardMaterial({color:0x000000}));
+    hatTop.position.y = 60;
+    // Khăn quàng đỏ
+    const scarf = new THREE.Mesh(new THREE.BoxGeometry(24, 5, 12), new THREE.MeshStandardMaterial({color:0xff0000}));
+    scarf.position.set(0, 32, 10);
+
+    snowman.add(body1, body2, head, hat, hatTop, scarf);
+    snowman.position.set(38, -63, 8);
     inside.add(snowman);
 
-    // Cây thông
+    // 4 cây thông ngẫu nhiên
     for(let i=0; i<4; i++){
       const tree = new THREE.Group();
-      tree.add(new THREE.Mesh(new THREE.CylinderGeometry(4,6,20), new THREE.MeshStandardMaterial({color:0x654321})));
-      const leaves = new THREE.Mesh(new THREE.ConeGeometry(25,50,8), new THREE.MeshStandardMaterial({color:0x0f5132}));
-      leaves.position.y = 35; tree.add(leaves);
-      tree.position.set(-60+i*40, -65, -30-Math.random()*30);
-      tree.scale.setScalar(0.6+Math.random()*0.5);
+      const trunk = new THREE.Mesh(new THREE.CylinderGeometry(5,7,22), new THREE.MeshStandardMaterial({color:0x654321}));
+      const leaves = new THREE.Mesh(new THREE.ConeGeometry(28,55,10), new THREE.MeshStandardMaterial({color:0x0f5132}));
+      leaves.position.y = 38;
+      tree.add(trunk, leaves);
+      tree.position.set(-65 + i*45, -65, -35 - Math.random()*25);
+      tree.scale.setScalar(0.6 + Math.random()*0.6);
+      tree.rotation.y = Math.random()*Math.PI;
       inside.add(tree);
     }
 
     // ==================== TUYẾT RƠI ====================
-    const snow = new THREE.Points(
-      new THREE.BufferGeometry().setAttribute('position', new THREE.BufferAttribute(new Float32Array(4000*3), 3)),
-      new THREE.PointsMaterial({color:0xffffff, size:4, transparent:true, opacity:0.9, blending:THREE.AdditiveBlending})
-    );
-    const pos = snow.geometry.attributes.position.array;
-    for(let i=0; i<pos.length; i+=3){
-      pos[i]   = THREE.MathUtils.randFloatSpread(240);
-      pos[i+1] = THREE.MathUtils.randFloatSpread(300) + 100;
-      pos[i+2] = THREE.MathUtils.randFloatSpread(240);
+    const snowCount = 5000;
+    const snowGeo = new THREE.BufferGeometry();
+    const positions = new Float32Array(snowCount * 3);
+    for(let i=0; i<snowCount*3; i+=3){
+      positions[i]   = THREE.MathUtils.randFloatSpread(240);
+      positions[i+1] = THREE.MathUtils.randFloatSpread(300) + 100;
+      positions[i+2] = THREE.MathUtils.randFloatSpread(240);
     }
+    snowGeo.setAttribute('position', new THREE.BufferAttribute(positions,3));
+
+    const snow = new THREE.Points(
+      snowGeo,
+      new THREE.PointsMaterial({
+        color: 0xffffff,
+        size: 4.5,
+        transparent: true,
+        opacity: 0.9,
+        blending: THREE.AdditiveBlending
+      })
+    );
     globe.add(snow);
 
     // Ánh sáng
     scene.add(new THREE.AmbientLight(0xffffff, 0.7));
-    scene.add(new THREE.DirectionalLight(0xffffff, 1).position.set(100,200,100));
+    const sunLight = new THREE.DirectionalLight(0xffffff, 1.2);
+    sunLight.position.set(100, 200, 100);
+    scene.add(sunLight);
 
-    // ==================== LẮC & TUYẾT ====================
+    // ==================== CHỈ LẮC KHI BẤM VÀO QUẢ CẦU ====================
+    const raycaster = new THREE.Raycaster();
+    const mouse = new THREE.Vector2();
     let shake = 0;
-    const shakeGlobe = () => { shake = 1; snow.material.size = 6; setTimeout(()=>snow.material.size=4,1000); };
 
-    window.addEventListener('click', shakeGlobe);
-    window.addEventListener('touchstart', shakeGlobe);
-    if(window.DeviceMotionEvent){
-      window.addEventListener('devicemotion', e=>{
-        const a = e.accelerationIncludingGravity;
-        if(a && Math.abs(a.x)+Math.abs(a.y)+Math.abs(a.z)>25) shakeGlobe();
-      });
+    function onPointer(event) {
+      const clientX = event.touches ? event.touches[0].clientX : event.clientX;
+      const clientY = event.touches ? event.touches[0].clientY : event.clientY;
+
+      mouse.x = (clientX / innerWidth) * 2 - 1;
+      mouse.y = -(clientY / innerHeight) * 2 + 1;
+
+      raycaster.setFromCamera(mouse, camera);
+      const intersects = raycaster.intersectObject(glass);
+
+      if (intersects.length > 0) {
+        shake = 1;
+        snow.material.size = 8;
+        setTimeout(() => snow.material.size = 4.5, 1200);
+      }
     }
 
-    // ==================== ANIMATE ====================
-    function animate(){
+    window.addEventListener('click', onPointer);
+    window.addEventListener('touchstart', onPointer);
+
+    // ==================== ANIMATION ====================
+    function animate() {
       requestAnimationFrame(animate);
 
+      // Quay chậm liên tục
       globe.rotation.y += 0.004;
-      if(shake>0.01){
-        globe.rotation.y += Math.sin(performance.now()*0.03)*0.04*shake;
-        globe.rotation.x += Math.sin(performance.now()*0.02)*0.03*shake;
-        shake *= 0.92;
+
+      // Hiệu ứng lắc
+      if (shake > 0.01) {
+        globe.rotation.y += Math.sin(performance.now() * 0.03) * 0.05 * shake;
+        globe.rotation.x += Math.sin(performance.now() * 0.022) * 0.04 * shake;
+        shake *= 0.93;
       }
 
-      for(let i=1; i<pos.length; i+=3){
-        pos[i] -= 0.6 + shake*3;
-        if(pos[i] < -150) pos[i] += 400;
+      // Tuyết rơi + rơi mạnh khi lắc
+      const pos = snow.geometry.attributes.position.array;
+      for (let i = 1; i < pos.length; i += 3) {
+        pos[i] -= 0.7 + shake * 4;
+        if (pos[i] < -180) pos[i] += 450;
       }
       snow.geometry.attributes.position.needsUpdate = true;
 
@@ -198,7 +240,8 @@
     }
     animate();
 
-    window.addEventListener('resize', ()=>{
+    // Resize
+    window.addEventListener('resize', () => {
       camera.aspect = innerWidth/innerHeight;
       camera.updateProjectionMatrix();
       renderer.setSize(innerWidth, innerHeight);
