--- a/index.html
+++ b/index.html
@@ -3,18 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <title>Quả Cầu Tuyết Giáng Sinh 2025</title>
+  <title>Quả Cầu Tuyết Bí Ẩn – Bấm 3 lần để xem điều kì diệu!</title>
   <style>
-    body { margin:0; overflow:hidden; background:#0a1a3a; touch-action:none; }
+    body { margin:0; overflow:hidden; background:#000; touch-action:none; }
     #info {
       position:absolute; top:20px; left:50%; transform:translateX(-50%);
-      color:#fff; background:rgba(0,0,0,0.6); padding:12px 30px; border-radius:30px;
-      font-family:'Segoe UI',Arial,sans-serif; font-size:17px; pointer-events:none; z-index:10;
+      color:#fff; background:rgba(0,0,0,0.7); padding:12px 35px; border-radius:40px;
+      font-family:'Segoe UI',Arial,sans-serif; font-size:18px; letter-spacing:1px;
+      pointer-events:none; z-index:100; box-shadow:0 0 20px rgba(0,255,255,0.5);
     }
+    #final {
+      position:fixed; inset:0; background:rgba(0,0,0,0.95); color:#ff0066;
+      font-size:90px; font-weight:bold; display:flex; align-items:center; justify-content:center;
+      flex-direction:column; opacity:0; pointer-events:none; transition:opacity 4s;
+      z-index:999; text-shadow:0 0 40px #ff0066, 0 0 80px #ff0066;
+    }
+    #final span { font-size:60px; margin-top:30px; color:#00ffff; text-shadow:0 0 30px #00ffff; }
   </style>
 </head>
 <body>
-  <div id="info">Chạm vào quả cầu tuyết để lắc nào!</div>
+  <div id="info">Chạm vào quả cầu <span id="count">0</span>/3 lần...</div>
+  <div id="final">
+    Merry Christmas 2025!<br>
+    <span>Chúc bạn một năm mới thật hạnh phúc!</span>
+  </div>
 
   <script type="importmap">
   {
@@ -29,11 +41,12 @@
     import * as THREE from 'three';
     import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
 
+    // ==================== CƠ BẢN ====================
     const scene = new THREE.Scene();
-    scene.background = new THREE.Color(0x0a1a3a);
+    scene.background = new THREE.Color(0x000814);
 
-    const camera = new THREE.PerspectiveCamera(50, innerWidth/innerHeight, 0.1, 1000);
-    camera.position.z = 350;
+    const camera = new THREE.PerspectiveCamera(50, innerWidth/innerHeight, 0.1, 2000);
+    camera.position.z = 380;
 
     const renderer = new THREE.WebGLRenderer({ antialias:true });
     renderer.setSize(innerWidth, innerHeight);
@@ -44,203 +57,207 @@
     controls.enableDamping = true;
     controls.dampingFactor = 0.08;
     controls.enablePan = false;
-    controls.minDistance = 180;
-    controls.maxDistance = 550;
+    controls.minDistance = 200;
+    controls.maxDistance = 600;
 
-    // ==================== QUẢ CẦU TUYẾT ====================
     const globe = new THREE.Group();
     scene.add(globe);
 
-    // Kính ngoài (để raycast bắt click chính xác)
+    // Kính để bắt click + hiển thị
     const glass = new THREE.Mesh(
       new THREE.SphereGeometry(120, 64, 64),
       new THREE.MeshStandardMaterial({
         color: 0xffffff,
-        metalness: 0.05,
+        metalness: 0.1,
         roughness: 0,
         transparent: true,
-        opacity: 0.15,
+        opacity: 0.22,
         side: THREE.FrontSide
       })
     );
     globe.add(glass);
 
-    // Đế gỗ
-    const base = new THREE.Mesh(
-      new THREE.CylinderGeometry(82, 92, 62, 64),
-      new THREE.MeshStandardMaterial({ color: 0x8b4513 })
-    );
-    base.position.y = -150;
-    globe.add(base);
+    // ==================== ĐẾ GỖ + NHÃN ====================
+    const base = new THREE.Mesh(new THREE.CylinderGeometry(84, 94, 64, 64), new THREE.MeshStandardMaterial({color:0x8b4513}));
+    base.position.y = -150; globe.add(base);
 
-    // Dải đỏ quanh đế
-    const ribbon = new THREE.Mesh(
-      new THREE.RingGeometry(80, 92, 64),
-      new THREE.MeshStandardMaterial({ color: 0xc41e3a, side: THREE.DoubleSide })
-    );
-    ribbon.rotation.x = -Math.PI/2;
-    ribbon.position.y = -125;
-    globe.add(ribbon);
+    const ribbon = new THREE.Mesh(new THREE.RingGeometry(82, 94, 64), new THREE.MeshStandardMaterial({color:0xc41e3a, side:THREE.DoubleSide}));
+    ribbon.rotation.x = -Math.PI/2; ribbon.position.y = -125; globe.add(ribbon);
 
-    // Nhãn Christmas
-    const canvas = document.createElement('canvas');
-    canvas.width = 512; canvas.height = 128;
+    const canvas = document.createElement('canvas'); canvas.width = 512; canvas.height = 128;
     const ctx = canvas.getContext('2d');
     const grad = ctx.createLinearGradient(0,0,512,128);
     grad.addColorStop(0,'#ffd700'); grad.addColorStop(1,'#b8860b');
     ctx.fillStyle = grad; ctx.fillRect(0,0,512,128);
-    ctx.strokeStyle = '#333'; ctx.lineWidth = 10; ctx.strokeRect(6,6,500,116);
-    ctx.fillStyle = '#8b0000'; ctx.font = 'bold 78px Arial';
+    ctx.strokeStyle = '#333'; ctx.lineWidth = 10; ctx.strokeRect(8,8,496,112);
+    ctx.fillStyle = '#8b0000'; ctx.font = 'bold 80px Arial';
     ctx.textAlign = 'center'; ctx.textBaseline = 'middle';
     ctx.fillText('Christmas', 256, 64);
 
-    const label = new THREE.Mesh(
-      new THREE.PlaneGeometry(94, 30),
-      new THREE.MeshBasicMaterial({ map: new THREE.CanvasTexture(canvas), transparent: true })
-    );
-    label.position.set(0, -125, 82);
-    globe.add(label);
+    const label = new THREE.Mesh(new THREE.PlaneGeometry(96, 32), new THREE.MeshBasicMaterial({map:new THREE.CanvasTexture(canvas), transparent:true}));
+    label.position.set(0, -125, 83); globe.add(label);
 
     // ==================== CẢNH BÊN TRONG ====================
-    const inside = new THREE.Group();
-    globe.add(inside);
+    const inside = new THREE.Group(); globe.add(inside);
 
     // Đất tuyết
-    const ground = new THREE.Mesh(
-      new THREE.CircleGeometry(112, 64),
-      new THREE.MeshStandardMaterial({ color: 0xf5faff, roughness: 0.9 })
-    );
-    ground.rotation.x = -Math.PI/2;
-    ground.position.y = -80;
-    inside.add(ground);
+    inside.add(new THREE.Mesh(new THREE.CircleGeometry(114, 64), new THREE.MeshStandardMaterial({color:0xf8faff})).rotateX(-Math.PI/2).position.set(0,-80,0));
 
     // Nhà gỗ
     const house = new THREE.Group();
-    const walls = new THREE.Mesh(new THREE.BoxGeometry(52, 48, 52), new THREE.MeshStandardMaterial({color:0x8b4513}));
-    const roof = new THREE.Mesh(new THREE.ConeGeometry(64, 42, 4), new THREE.MeshStandardMaterial({color:0xb22222}));
-    roof.position.y = 45; roof.rotation.y = Math.PI/4;
-    const door = new THREE.Mesh(new THREE.BoxGeometry(12, 24, 2), new THREE.MeshStandardMaterial({color:0x654321}));
-    door.position.set(0, -12, 26.1);
-    house.add(walls, roof, door);
-    house.position.set(-18, -56, -18);
-    inside.add(house);
+    house.add(new THREE.Mesh(new THREE.BoxGeometry(54,50,54), new THREE.MeshStandardMaterial({color:0x8b4513})));
+    const roof = new THREE.Mesh(new THREE.ConeGeometry(66,44,4), new THREE.MeshStandardMaterial({color:0xb22222}));
+    roof.position.y = 47; roof.rotation.y = Math.PI/4; house.add(roof);
+    const door = new THREE.Mesh(new THREE.BoxGeometry(14,26,2), new THREE.MeshStandardMaterial({color:0x654321}));
+    door.position.set(0,-11,27.1); house.add(door);
+    house.position.set(-20,-55,-15); inside.add(house);
 
-    // Người tuyết dễ thương
+    // Người tuyết
     const snowman = new THREE.Group();
-    const body1 = new THREE.Mesh(new THREE.SphereGeometry(17), new THREE.MeshStandardMaterial({color:0xffffff}));
-    const body2 = new THREE.Mesh(new THREE.SphereGeometry(13), new THREE.MeshStandardMaterial({color:0xffffff}));
-    body2.position.y = 23;
-    const head = new THREE.Mesh(new THREE.SphereGeometry(10), new THREE.MeshStandardMaterial({color:0xffffff}));
-    head.position.y = 40;
+    const b1 = new THREE.Mesh(new THREE.SphereGeometry(18), new THREE.MeshStandardMaterial({color:0xffffff})); snowman.add(b1);
+    const b2 = new THREE.Mesh(new THREE.SphereGeometry(14), new THREE.MeshStandardMaterial({color:0xffffff})); b2.position.y = 25; snowman.add(b2);
+    const head = new THREE.Mesh(new THREE.SphereGeometry(10), new THREE.MeshStandardMaterial({color:0xffffff})); head.position.y = 43; snowman.add(head);
+    const hat = new THREE.Mesh(new THREE.CylinderGeometry(9,11,22), new THREE.MeshStandardMaterial({color:0x000})); hat.position.y = 52; snowman.add(hat);
+    const hatTop = new THREE.Mesh(new THREE.CylinderGeometry(13,13,5), new THREE.MeshStandardMaterial({color:0x000})); hatTop.position.y = 65; snowman.add(hatTop);
+    const scarf = new THREE.Mesh(new THREE.BoxGeometry(26,6,14), new THREE.MeshStandardMaterial({color:0xff0000})); scarf.position.set(0,34,11); snowman.add(scarf);
+    snowman.position.set(40,-62,10); inside.add(snowman);
 
-    // Mắt mũ cao bồi
-    const hat = new THREE.Mesh(new THREE.CylinderGeometry(8, 10, 20), new THREE.MeshStandardMaterial({color:0x000000}));
-    hat.position.y = 48;
-    const hatTop = new THREE.Mesh(new THREE.CylinderGeometry(12, 12, 4), new THREE.MeshStandardMaterial({color:0x000000}));
-    hatTop.position.y = 60;
-    // Khăn quàng đỏ
-    const scarf = new THREE.Mesh(new THREE.BoxGeometry(24, 5, 12), new THREE.MeshStandardMaterial({color:0xff0000}));
-    scarf.position.set(0, 32, 10);
-
-    snowman.add(body1, body2, head, hat, hatTop, scarf);
-    snowman.position.set(38, -63, 8);
-    inside.add(snowman);
-
-    // 4 cây thông ngẫu nhiên
+    // 4 cây thông
     for(let i=0; i<4; i++){
       const tree = new THREE.Group();
-      const trunk = new THREE.Mesh(new THREE.CylinderGeometry(5,7,22), new THREE.MeshStandardMaterial({color:0x654321}));
-      const leaves = new THREE.Mesh(new THREE.ConeGeometry(28,55,10), new THREE.MeshStandardMaterial({color:0x0f5132}));
-      leaves.position.y = 38;
-      tree.add(trunk, leaves);
-      tree.position.set(-65 + i*45, -65, -35 - Math.random()*25);
-      tree.scale.setScalar(0.6 + Math.random()*0.6);
+      const trunk = new THREE.Mesh(new THREE.CylinderGeometry(5,7,24), new THREE.MeshStandardMaterial({color:0x654321}));
+      const leaves = new THREE.Mesh(new THREE.ConeGeometry(30,60,12), new THREE.MeshStandardMaterial({color:0x0f5132}));
+      leaves.position.y = 42; tree.add(trunk, leaves);
+      tree.position.set(-70 + i*50, -64, -40 - Math.random()*30);
+      tree.scale.setScalar(0.6 + Math.random()*0.5);
       tree.rotation.y = Math.random()*Math.PI;
       inside.add(tree);
     }
 
     // ==================== TUYẾT RƠI ====================
-    const snowCount = 5000;
+    const snowCount = 6000;
     const snowGeo = new THREE.BufferGeometry();
-    const positions = new Float32Array(snowCount * 3);
+    const positions = new Float32Array(snowCount*3);
     for(let i=0; i<snowCount*3; i+=3){
-      positions[i]   = THREE.MathUtils.randFloatSpread(240);
-      positions[i+1] = THREE.MathUtils.randFloatSpread(300) + 100;
-      positions[i+2] = THREE.MathUtils.randFloatSpread(240);
+      positions[i]   = THREE.MathUtils.randFloatSpread(250);
+      positions[i+1] = THREE.MathUtils.randFloatSpread(320) + 120;
+      positions[i+2] = THREE.MathUtils.randFloatSpread(250);
     }
     snowGeo.setAttribute('position', new THREE.BufferAttribute(positions,3));
-
-    const snow = new THREE.Points(
-      snowGeo,
-      new THREE.PointsMaterial({
-        color: 0xffffff,
-        size: 4.5,
-        transparent: true,
-        opacity: 0.9,
-        blending: THREE.AdditiveBlending
-      })
-    );
+    const snow = new THREE.Points(snowGeo, new THREE.PointsMaterial({color:0xffffff, size:5, transparent:true, opacity:0.9, blending:THREE.AdditiveBlending}));
     globe.add(snow);
 
-    // Ánh sáng
-    scene.add(new THREE.AmbientLight(0xffffff, 0.7));
-    const sunLight = new THREE.DirectionalLight(0xffffff, 1.2);
-    sunLight.position.set(100, 200, 100);
-    scene.add(sunLight);
+    scene.add(new THREE.AmbientLight(0xffffff, 0.8));
+    scene.add(new THREE.DirectionalLight(0xffffff, 1.5).position.set(120,250,100));
 
-    // ==================== CHỈ LẮC KHI BẤM VÀO QUẢ CẦU ====================
+    // ==================== ĐẾM CLICK & HIỆU ỨNG ====================
+    let clickCount = 0;
+    const countDisplay = document.getElementById('count');
+    let spinSpeed = 0;
+    let isExploded = false;
+    const fragments = [];
+
     const raycaster = new THREE.Raycaster();
     const mouse = new THREE.Vector2();
-    let shake = 0;
 
     function onPointer(event) {
-      const clientX = event.touches ? event.touches[0].clientX : event.clientX;
-      const clientY = event.touches ? event.touches[0].clientY : event.clientY;
-
-      mouse.x = (clientX / innerWidth) * 2 - 1;
-      mouse.y = -(clientY / innerHeight) * 2 + 1;
+      if (isExploded) return;
+      const x = event.touches ? event.touches[0].clientX : event.clientX;
+      const y = event.touches ? event.touches[0].clientY : event.clientY;
+      mouse.x = (x / innerWidth)*2 - 1;
+      mouse.y = -(y / innerHeight)*2 + 1;
 
       raycaster.setFromCamera(mouse, camera);
-      const intersects = raycaster.intersectObject(glass);
+      if (raycaster.intersectObject(glass).length > 0) {
+        clickCount++;
+        countDisplay.textContent = clickCount;
+        countDisplay.parentElement.style.background = clickCount === 3 ? 'rgba(255,0,0,0.8)' : 'rgba(0,0,0,0.7)';
 
-      if (intersects.length > 0) {
-        shake = 1;
-        snow.material.size = 8;
-        setTimeout(() => snow.material.size = 4.5, 1200);
+        if (clickCount === 3) {
+          // Tăng tốc quay điên cuồng
+          const accel = setInterval(() => {
+            spinSpeed += 0.18;
+            if (spinSpeed > 3.5) {
+              clearInterval(accel);
+              explodeGlobe();
+            }
+          }, 180);
+
+          new Audio('https://assets.mixkit.co/sfx/preview/mixkit-glass-breaking-short-1467.mp3').play().catch(()=>{});
+        }
       }
     }
-
     window.addEventListener('click', onPointer);
     window.addEventListener('touchstart', onPointer);
 
-    // ==================== ANIMATION ====================
+    // ==================== VỠ QUẢ CẦU ====================
+    function explodeGlobe() {
+      isExploded = true;
+      document.getElementById('info').style.opacity = '0';
+
+      for(let i=0; i<220; i++){
+        const size = 6 + Math.random()*14;
+        const frag = new THREE.Mesh(
+          new THREE.PlaneGeometry(size, size),
+          new THREE.MeshPhysicalMaterial({
+            color: 0xffffff,
+            metalness: 0.95,
+            roughness: 0.05,
+            transmission: 0.98,
+            thickness: 4,
+            transparent: true,
+            opacity: 0.9
+          })
+        );
+        frag.position.copy(glass.position);
+        const dir = new THREE.Vector3(Math.random()-0.5, Math.random()-0.3, Math.random()-0.5).normalize();
+        const speed = 10 + Math.random()*20;
+        frag.userData = {
+          vel: dir.multiplyScalar(speed),
+          rot: new THREE.Vector3(Math.random()*30, Math.random()*30, Math.random()*30)
+        };
+        scene.add(frag);
+        fragments.push(frag);
+      }
+      globe.visible = false;
+
+      setTimeout(() => {
+        document.getElementById('final').style.opacity = 1;
+      }, 2000);
+    }
+
+    // ==================== ANIMATE ====================
     function animate() {
       requestAnimationFrame(animate);
 
-      // Quay chậm liên tục
-      globe.rotation.y += 0.004;
+      globe.rotation.y += 0.004 + spinSpeed;
 
-      // Hiệu ứng lắc
-      if (shake > 0.01) {
-        globe.rotation.y += Math.sin(performance.now() * 0.03) * 0.05 * shake;
-        globe.rotation.x += Math.sin(performance.now() * 0.022) * 0.04 * shake;
-        shake *= 0.93;
-      }
-
-      // Tuyết rơi + rơi mạnh khi lắc
+      // Tuyết rơi
       const pos = snow.geometry.attributes.position.array;
-      for (let i = 1; i < pos.length; i += 3) {
-        pos[i] -= 0.7 + shake * 4;
-        if (pos[i] < -180) pos[i] += 450;
+      for(let i=1; i<pos.length; i+=3){
+        pos[i] -= 0.9 + spinSpeed*6;
+        if(pos[i] < -200) pos[i] += 500;
       }
       snow.geometry.attributes.position.needsUpdate = true;
+
+      // Mảnh vỡ bay
+      if(isExploded){
+        fragments.forEach(f => {
+          f.position.add(f.userData.vel);
+          f.rotation.x += f.userData.rot.x * 0.04;
+          f.rotation.y += f.userData.rot.y * 0.04;
+          f.rotation.z += f.userData.rot.z * 0.04;
+          f.userData.vel.y -= 0.5;
+          f.material.opacity *= 0.98;
+          if(f.material.opacity < 0.02) scene.remove(f);
+        });
+      }
 
       controls.update();
       renderer.render(scene, camera);
     }
     animate();
 
-    // Resize
     window.addEventListener('resize', () => {
       camera.aspect = innerWidth/innerHeight;
       camera.updateProjectionMatrix();
